[package]
name = "mmcai_rs"
version = "0.3.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rand = "0.10"
assert_fs = "1"
fake = "4"
